# choc-expr

./: LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: publish-package.yml  tests.yml
choc_expr/: __init__.py  attr.py  expr.py  utils.py
tests/: test_attr.py  test_expr.py
