[metadata]
name = choc-expr
version = 1.2
author = Pierre-Emmanuel Brian
author_email = pebrian@outlook.fr
description = A Python templating library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pe-brian/choc-expr
project_urls =
    Bug Tracker = https://github.com/pe-brian/choc-expr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.12.2
install_requires =
    typeguard == 4.1.5